<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateGame">

    <TextView
        android:id="@+id/numberGameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/game_number"
        android:textColor="@color/textOnP"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/max_score"
        android:textColor="@color/textOnP"
        app:layout_constraintStart_toStartOf="@+id/gameNameTv"
        app:layout_constraintTop_toBottomOf="@+id/gameNameTv" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/player_1"
        android:textColor="@color/textOnP"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/player_2"
        android:textColor="@color/textOnP"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/player_3"
        android:textColor="@color/textOnP"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/player_4"
        android:textColor="@color/textOnP"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/eTPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/eTMaximum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/eTMaximum"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/eTPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/eTPlayer1"
        app:layout_constraintStart_toStartOf="@+id/eTPlayer1"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/eTPlayer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/eTPlayer2"
        app:layout_constraintStart_toStartOf="@+id/eTPlayer2"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/eTPlayer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/eTPlayer3"
        app:layout_constraintStart_toStartOf="@+id/eTPlayer3"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <EditText
        android:id="@+id/eTMaximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/default_max_score"
        android:inputType="number"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/eTGameName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eTGameName"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/createGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/game_text_view_bg"
        android:text="@string/create_game"
        android:textColor="@color/TextOnS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTPlayer4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/gameNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/game_name_desc"
        android:textColor="@color/textOnP"
        app:layout_constraintEnd_toStartOf="@+id/numberGameTv"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberGameTv" />

    <EditText
        android:id="@+id/eTGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/game_name"
        android:inputType="textPersonName"
        android:textColor="@color/textOnP"
        android:textColorHint="@color/textOnP"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/gameNameTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toEndOf="@+id/gameNameTv"
        app:layout_constraintTop_toTopOf="@+id/gameNameTv" />

</androidx.constraintlayout.widget.ConstraintLayout>